# MeshCore_Power

./: .gitignore  README.md  build-iotthinks.sh  build.sh  build_firmware.sh  platformio.ini  poli_version.txt  sitemap.xml
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: auto-label-issues.yml  build-all-firmwares.yml  build-m5stack-c6l-firmwares.yml  ci.yml  docs.yml  release.yml  run-unit-tests.yml
boards/: ebyte_eora-hub.json  lilygo_twatch_s3.json  linux.json  nrf52840_s140_v6.ld  nrf52840_s140_v6_extrafs.ld  nrf52840_s140_v7.ld  nrf52840_s140_v7_extrafs.ld  thinknode_m4.json
docs/: cli_commands.md  companion_protocol.md  faq.md  findmy.md  kiss_modem_protocol.md  nrf52_power_management.md  number_allocations.md  ota_protocol.md  ota_user_guide.md  payloads.md
examples/companion_radio/: AbstractUITask.h  DataStore.cpp  DataStore.h  MyMesh.cpp  MyMesh.h  NodePrefs.h  main.cpp
examples/companion_radio_bot/: BOT_README.md  BotCommands.cpp  BotCommands.h  BotConfig.cpp  BotConfig.h  BotMesh.h  BotMyMesh.cpp  BotSensorManager.h  BotTarget.cpp  main.cpp
examples/kiss_modem/: KissModem.cpp  KissModem.h  main.cpp
examples/mobile_repeater/: MobilityWatchdog.h  main.cpp
examples/simple_repeater/: MyMesh.cpp  MyMesh.h  UITask.cpp  UITask.h  UnicodeFold.h  main.cpp
examples/simple_room_server/: MyMesh.cpp  MyMesh.h  UITask.cpp  main.cpp
qr_codes/: index.html
src/: Dispatcher.cpp  Dispatcher.h  Identity.cpp  Identity.h  Mesh.cpp  Mesh.h  MeshCore.h  Packet.cpp  Packet.h
tools/motatool/: CMakeLists.txt  README.md
tools/motatool/src/: crypto.cpp  crypto.h  input.cpp  input.h  main.cpp  mota.cpp  mota.h  mota_format.h  serve.cpp  serve.h  util.h
tools/motatool/tests/: test_motatool.cpp
(+373 files in other folders)
